add set color code route
